--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.0.4-preview-rc",
+    "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.0.0",
+    "luxon": "^1.25.0",
+    "pg": "^8.4.2",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13"
   }
