--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "youch-terminal": "^1.0.1"
   },
   "dependencies": {
-    "@adonisjs/core": "^5.0.4-preview-rc",
+    "@adonisjs/auth": "^5.0.2",
+    "@adonisjs/core": "^5.0.4-preview-rc-2",
     "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.0.0",
     "luxon": "^1.25.0",
     "pg": "^8.4.2",
+    "phc-argon2": "^1.0.11",
+    "phc-bcrypt": "^1.0.4",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13"
   }
