增加使用者 api 與 line bot service

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@adonisjs/core": "^5.0.4-preview-rc-2",
     "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.0.0",
+    "@line/bot-sdk": "^7.1.0",
+    "axios": "^0.21.0",
     "luxon": "^1.25.0",
     "pg": "^8.4.2",
     "phc-argon2": "^1.0.11",
